# interlock

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
concepts/: index.html
concepts/aggregates/: index.html
concepts/commands/: index.html
concepts/cqrs/: index.html
concepts/event-processors/: index.html
concepts/event-sourcing/: index.html
concepts/events/: index.html
concepts/projections/: index.html
concepts/queries/: index.html
docs/: index.md
docs/concepts/: aggregates.md  commands.md  cqrs.md  event-processors.md  event-sourcing.md  events.md  index.md  projections.md  queries.md
docs/getting-started/: index.md  quickstart.md
docs/guides/: aggregate-optimization.md  application-lifecycle.md  custom-middleware.md  database-integrations.md  dependency-injection.md  event-upcasting.md  index.md  processor-catchup.md  sagas.md  writing-tests.md
docs/reference/: index.md
docs/tutorial/: 01-your-first-aggregate.md  02-commands-and-handlers.md  03-events-and-sourcing.md  04-event-processors.md  05-middleware.md  05-queries-and-projections.md  06-middleware.md  06-structuring-the-application.md  07-putting-it-together.md  07-structuring-the-application.md  08-putting-it-together.md  index.md
getting-started/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/aggregate-optimization/: index.html
guides/application-lifecycle/: index.html
guides/custom-middleware/: index.html
guides/database-integrations/: index.html
guides/dependency-injection/: index.html
guides/event-upcasting/: index.html
guides/processor-catchup/: index.html
guides/sagas/: index.html
guides/writing-tests/: index.html
interlock/: __init__.py  context.py  routing.py
interlock/aggregates/: __init__.py  aggregate.py
interlock/application/: __init__.py  application.py  configurators.py  container.py  discovery.py
interlock/commands/: __init__.py  bus.py  (+2 more)
ouroboros/: context.py  routing.py
reference/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
tests/: README.md  conftest.py
tutorial/: index.html
(+268 files in other folders)
